--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/bgpat/anchor-selector/issues"
   },
-  "homepage": "https://github.com/bgpat/anchor-selector#readme"
+  "homepage": "https://github.com/bgpat/anchor-selector#readme",
+  "devDependencies": {
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
+  }
 }
