--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "babel-loader": "^8.0.4",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "eslint": "^5.6.1",
     "eslint-loader": "^2.1.1",
     "sass-loader": "^7.1.0",
