--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^5.6.1",
     "eslint-loader": "^2.1.1",
     "sass-loader": "^7.1.0",
+    "web-ext": "^2.9.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   }
