--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "webpack -w",
     "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "web-ext lint -i src"
   },
   "repository": {
     "type": "git",
