--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-minify-webpack-plugin": "^0.3.1",
+    "color": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-loader": "^2.1.2",
     "sass-loader": "^7.1.0",
