--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,9 @@
     }
   ],
   "page_action": {
-    "default_icon": "icons/anchor-selector.svg",
+    "default_icon": {
+      "48": "icons/anchor-selector.png"
+    },
     "default_title": "Anchor Selector",
     "show_matches": ["<all_urls>"]
   }
