--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "color": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-loader": "^2.1.2",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
     "sass-loader": "^7.1.0",
     "web-ext": "^3.0.0",
     "webpack": "^4.29.6",
