--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-loader": "^2.1.2",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
+    "prettier": "^1.16.4",
     "sass-loader": "^7.1.0",
     "web-ext": "^3.0.0",
     "webpack": "^4.29.6",
