--- a/.babelrc
+++ b/.babelrc
@@ -12,9 +12,7 @@
       "@babel/env",
       {
         "targets": {
-          "browsers": [
-            "last 2 versions"
-          ]
+          "browsers": ["last 2 versions"]
         }
       }
     ]
