--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,6 @@
     "default_icon": {
       "48": "icons/anchor-selector.png"
     },
-    "default_title": "Anchor Selector",
-    "show_matches": ["<all_urls>"]
+    "default_title": "Anchor Selector"
   }
 }
