--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prettier": "^1.17.0",
     "sass-loader": "^7.1.0",
     "web-ext": "^3.0.0",
+    "webextension-polyfill": "^0.4.0",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
   },
