--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "webpack -w",
     "build": "webpack",
     "test": "web-ext lint",
-    "sign": "web-ext sign --api-key=$JWT_ISSUER --api-secret=$JWT_SECRET"
+    "sign": "web-ext sign --api-key=$JWT_ISSUER --api-secret=$JWT_SECRET",
+    "preversion": "dot-json manifest.json version $npm_package_version && git add manifest.json"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "babel-minify-webpack-plugin": "^0.3.1",
     "canvas": "^2.4.1",
     "color": "^3.1.0",
+    "dot-json": "^1.1.0",
     "eslint": "^5.16.0",
     "eslint-loader": "^2.1.2",
     "husky": "^1.3.1",
