--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prettier": "^1.18.2",
     "sass-loader": "^7.3.1",
     "web-ext": "^3.2.0",
+    "web-ext-submit": "^3.2.0",
     "webextension-polyfill": "^0.5.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
