--- a/manifest.json
+++ b/manifest.json
@@ -32,5 +32,5 @@
   "options_ui": {
     "page": "options.html"
   },
-  "permissions": ["storage"]
+  "permissions": ["clipboardWrite", "storage", "tabs"]
 }
