--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/polyfill": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
-    "@bgpat/webext-webpack-plugin": "^0.1.2",
+    "@bgpat/webext-webpack-plugin": "^0.1.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-minify-webpack-plugin": "^0.3.1",
     "canvas": "^2.6.1",
     "chrome-webstore-upload-cli": "^1.2.0",
     "color": "^3.1.2",
+    "core-js": "^3.6.5",
     "dot-json": "^1.2.0",
     "eslint": "^7.8.1",
     "eslint-loader": "^4.0.2",
