--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.14.8",
     "@bgpat/webext-webpack-plugin": "^0.1.4",
+    "@zeit/eslint-config-node": "^0.3.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-minify-webpack-plugin": "^0.3.1",
