--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -14,6 +14,9 @@ categories:
     labels:
       - 'chore'
       - 'maintenance'
+  - title: '🤖 Dependencies'
+    labels:
+      - 'dependencies'
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
 version-resolver:
