--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,9 @@
 name: publish
 on:
   push:
-    tags:
-      - 'v*'
+    release:
+      types:
+        - released
 jobs:
   publish:
     runs-on: ubuntu-20.04
