--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
         with:
           path: |
             ~/.npm
-            node_versions
+            node_modules
           key: ${{ runner.os }}-${{ hashFiles('package-lock.json') }}
 
       - id: node-version
