--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,8 @@ jobs:
           title: ${{ steps.release-drafter.outputs.tag_name }}
           body: ""
       - run: gh pr merge ${{ steps.pr.outputs.pull-request-url }} --auto
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         if: ${{ steps.pr.outputs.pull-request-url != null }}
       - run: npm run build
       - uses: bgpat/release-asset-action@master
