--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "core-js": "3.19.0",
     "dot-json": "1.2.2",
     "eslint": "7.32.0",
-    "eslint-loader": "4.0.2",
+    "eslint-webpack-plugin": "^3.1.0",
     "husky": "7.0.4",
     "lint-staged": "11.2.6",
     "prettier": "2.4.1",
