--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
   "homepage": "https://github.com/bgpat/anchor-selector#readme",
   "devDependencies": {
     "@babel/core": "7.15.8",
+    "@babel/eslint-parser": "^7.15.8",
     "@babel/polyfill": "7.12.1",
     "@babel/preset-env": "7.15.8",
     "@bgpat/webext-webpack-plugin": "0.1.8",
     "@zeit/eslint-config-node": "0.3.0",
-    "babel-eslint": "10.1.0",
     "babel-loader": "8.2.3",
     "babel-minify-webpack-plugin": "0.3.1",
     "canvas": "2.8.0",
