--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@bgpat/webext-webpack-plugin": "0.1.8",
     "@zeit/eslint-config-node": "0.3.0",
     "babel-loader": "8.2.3",
-    "babel-minify-webpack-plugin": "0.3.1",
     "canvas": "2.8.0",
     "chrome-webstore-upload-cli": "2.0.1",
     "color": "4.0.1",
@@ -45,6 +44,7 @@
     "lint-staged": "11.2.6",
     "prettier": "2.4.1",
     "sass-loader": "12.3.0",
+    "terser-webpack-plugin": "^5.2.4",
     "web-ext": "6.5.0",
     "web-ext-submit": "6.5.0",
     "webextension-polyfill": "0.8.0",
