--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "start": "webpack -w",
     "build": "webpack",
     "test": "web-ext lint",
-    "publish": "npm run publish:chrome && npm run publish:firefox",
+    "lint": "npm-run-all lint:*",
+    "lint:webext": "web-ext lint",
+    "lint:css": "stylelint stylesheets/*.css",
+    "lint:html": "linthtml **.html",
+    "lint:js": "eslint src",
+    "publish": "npm-run-all publish:*",
     "publish:firefox": "web-ext-submit --api-key=$JWT_ISSUER --api-secret=$JWT_SECRET",
     "publish:chrome": "chrome-webstore-upload upload --source web-ext-artifacts/* --auto-publish",
     "preversion": "dot-json manifest.json version $npm_package_version && git add manifest.json"
@@ -30,6 +35,7 @@
     "@babel/eslint-parser": "7.15.8",
     "@babel/preset-env": "7.15.8",
     "@bgpat/webext-webpack-plugin": "0.1.8",
+    "@linthtml/linthtml": "^0.8.0",
     "@zeit/eslint-config-node": "0.3.0",
     "babel-loader": "8.2.3",
     "canvas": "2.8.0",
@@ -38,11 +44,14 @@
     "core-js": "3.19.0",
     "dot-json": "1.2.2",
     "eslint": "8.1.0",
-    "eslint-webpack-plugin": "3.1.0",
     "husky": "7.0.4",
     "lint-staged": "11.2.6",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.4.1",
     "sass-loader": "12.3.0",
+    "stylelint": "^14.0.1",
+    "stylelint-config-standard": "^23.0.0",
+    "stylelint-order": "^5.0.0",
     "terser-webpack-plugin": "5.2.4",
     "web-ext": "6.5.0",
     "web-ext-submit": "6.5.0",
