Fix lint errors

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -9,6 +9,12 @@
       true, {
         ignoreProperties:
           ["inset-block-end", "inset-block-start"]
-    }]
+    }],
+    "selector-class-pattern": [
+      "^((--)?[a-z][a-z0-9]*)(-[a-z0-9]+)*$",
+      {
+        "message": "Expected class selector to be kebab-case"
+      }
+    ]
   }
 }
