--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,17 +19,12 @@ jobs:
           - chrome
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ~/.npm
-            node_modules
-          key: ${{ runner.os }}-${{ hashFiles('package-lock.json') }}
       - id: node-version
         run: echo "::set-output name=version=$(cat .node-version)"
       - uses: actions/setup-node@v2
         with:
           node-version: ${{ steps.node-version.output.version }}
+          cache: npm
       - run: npm install
       - run: npm run build
       - run: npm run publish:${{ matrix.browser }}
