--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,17 +14,12 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ssh-key: ${{ secrets.DEPLOY_KEY }}
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ~/.npm
-            node_modules
-          key: ${{ runner.os }}-${{ hashFiles('package-lock.json') }}
       - id: node-version
         run: echo "::set-output name=version=$(cat .node-version)"
       - uses: actions/setup-node@v2
         with:
           node-version: ${{ steps.node-version.output.version }}
+          cache: npm
       - run: npm install
       - run: |
           git config user.name "github-actions[bot]"
