--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,18 +6,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ~/.npm
-            node_modules
-          key: ${{ runner.os }}-${{ hashFiles('package-lock.json') }}
-
       - id: node-version
         run: echo "::set-output name=version=$(cat .node-version)"
       - uses: actions/setup-node@v2
         with:
           node-version: ${{ steps.node-version.outputs.version }}
+          cache: npm
 
       - run: npm install
       - run: npm run build
