--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,8 @@ jobs:
           delete-branch: true
           title: ${{ steps.release-drafter.outputs.tag_name }}
           body: ""
+          labels: |
+             maintenance
       - run: gh pr merge ${{ steps.pr.outputs.pull-request-url }} --auto --merge --delete-branch
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
