--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-20.04
     env:
       CLIENT_ID: ${{ secrets.CLIENT_ID }}
+      CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
       EXTENSION_ID: ${{ secrets.EXTENSION_ID }}
       JWT_ISSUER: ${{ secrets.JWT_ISSUER }}
       JWT_SECRET: ${{ secrets.JWT_SECRET }}
