--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,11 +20,9 @@ jobs:
           - chrome
     steps:
       - uses: actions/checkout@v3
-      - id: node-version
-        run: echo "::set-output name=version=$(cat .node-version)"
       - uses: actions/setup-node@v3
         with:
-          node-version: ${{ steps.node-version.output.version }}
+          node-version-file: .node-version
           cache: npm
       - run: npm install
       - run: npm run build
